# kida-backend

./: .gitignore  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 26f5dced0068_update_emotion_table.py  3b1aec6dc81a_update_parent_and_child_tables.py  3dc896cb9543_add_all_tables.py  4f1cc9361ac0_add_table.py  5e53e203bfc3_create_tables.py  5fcc9cf30f05_update_child_and_parentchild_tables.py  671da503e5ce_update_parentchild_child_tables.py  9899e91861b5_update_activity_table.py  b8a2202b7c73_update_activity_table.py  bb9b2b6493d9_update_parentchild_table.py  c7f940ae501a_add_tables.py  d3f23b88157b_add_table.py
scripts/: run_product.sh
src/: main.py
src/api/: __init__.py  activity.py  diary.py  question.py  user.py
src/api/v1/: __init__.py  activity.py  diary.py  emotion.py  family.py  level.py  question.py  user.py
src/core/: app_config.py
src/crud/: __init__.py  activity.py  base.py  diary.py  emotion.py  level.py  question.py  user.py
src/database/: __init__.py  base.py  session.py
src/model/: __init__.py  activity.py  activity_category.py  activity_diary.py  activity_diary_reply.py  activity_location.py  activity_view.py  child.py  child_activity_like.py  diary.py  diary_reply.py  emotion.py  family.py  level.py  parent.py  parent_activity_like.py  parent_child.py  question.py  question_category.py  question_diary.py  question_diary_reply.py  unique_constraints.py
src/schema/: __init__.py  response_base.py
src/schema/activity/: __init__.py  crud.py
src/schema/activity_category/: __init__.py  crud.py
src/schema/activity_location/: __init__.py  crud.py
src/schema/diary/: __init__.py  crud.py
src/schema/emotion/: __init__.py  crud.py
src/schema/level/: __init__.py  (+1 more)
src/util/: __init__.py  auth.py  open_api.py  s3.py  time_converter.py
(+24 files in other folders)
