[tool.poetry]
name = "kida-backend"
version = "1"
description = "Kids Diary, KiDa"
authors = ["0417taehyun <0417taehyun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
fastapi = "^0.79.1"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"
motor = "^3.0.0"
requests = "^2.28.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
dnspython = "^2.2.1"
bcrypt = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
